# db_explorer

./: Cargo.toml  README.md
.github/: copilot-instructions.md
src/: app.rs  lib.rs  main.rs  messages.rs  worker.rs
src/aws/: dynamodb.rs
tests/: live_dynamodb.rs
